--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <body>
-      <title>８章の課題</title>
-      <meta name="description" content="毎日の気象情報をお知らせします">
+      <title>８章課題</title>
+      <meta name="description" content="このページは8章の課題です。">
        <meta charset="utf-8">
     </body>
   </head>
@@ -28,8 +28,9 @@
           <p>日本でも年々人気の高まるハロウィン。<br>
           今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
           <audio src="ichi.mp3" controls></audio>
-          <br>
+        </section>
 
+        <section>
           <h3>私のおすすめ和菓子アンケートフォーム</h3>
           <label>氏名</label>
            <input type="text" placeholder="名前を入力してください">
@@ -64,7 +65,9 @@
            <input type="submit" value="送信">
            <input type="reset" value="リセット">
         </section>
+      </article>
 
+      <article>
         <section>
           <h2>テクノロジー<h2>
           <h3>SAMURAIが新しい動画をリリース</h3>
