kadai_018アップロード

--- a/kadai_018/kadai_018.html
+++ b/kadai_018/kadai_018.html
@@ -17,7 +17,7 @@
       <div id="middle">
         <div id="middle-child01"></div>
         <div id="middle-child02"></div>
-        <dov id="middle-child03"></div>
+        <div id="middle-child03"></div>
       </div>
 
       <div id="bottom">
